package com.ride2go.ridetogtfsconverter.model.item.routing.ors;

import lombok.Data;

@Data
public class JSONExtraSummary {

	private double value;

	private double distance;

	private double amount;
}
