package com.ride2go.ridetogtfsconverter.model.item.routing.ors;

import lombok.Data;

@Data
public class RouteWarning {

	private int warningCode;

	private String warningMessage;
}
